# Performance_Comercial

variavel_gabarito_pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt
variavel_gabarito_pipeline/config/: figuras.yaml  kpis.yaml  paths.yaml
variavel_gabarito_pipeline/docs/: supervisor_vendas.md
variavel_gabarito_pipeline/reports/validation/: desenvolvedor_cf_diagnostic.md
variavel_gabarito_pipeline/src/pipeline/: __init__.py
variavel_gabarito_pipeline/src/pipeline/core/: __init__.py  exceptions.py  logger.py  paths.py  utils.py
variavel_gabarito_pipeline/src/pipeline/domain/: __init__.py  diagnosticos.py  escalonada.py  kpi_rules.py  performance.py
variavel_gabarito_pipeline/src/pipeline/figures/: __init__.py  base.py  desenvolvedor_cf_diagnostic.py  desenvolvedor_hid.py  promotor_vendas.py  supervisor_vendas.py
variavel_gabarito_pipeline/src/pipeline/io/: __init__.py  csv_reader.py  csv_writer.py  excel_reader.py  excel_writer.py
variavel_gabarito_pipeline/src/pipeline/runners/: __init__.py  run_all.py  run_desenvolvedor_cf_diagnostic.py  run_desenvolvedor_hid.py  run_diagnostico_aderencia_red.py  run_diagnostico_red_mes_rota.py  run_diagnostico_validacao_promotor.py  run_export_comparacao_promotor.py  run_export_excel_promotor.py  run_export_promotor_formato_gabarito.py  run_inventario.py  run_promotor.py  run_staging.py  run_supervisor_vendas.py  (+4 more)
variavel_gabarito_pipeline/tests/: test_aderencia_red.py  test_csv_io.py  test_escalonada.py  test_estrutura_promotor.py  test_kpi_rules.py  test_promotor.py  test_validacao_promotor.py
(+17 files in other folders)
