[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "variavel-gabarito-pipeline"
version = "0.1.0"
description = "Pipeline Python para substituir a logica Variavel no Gabarito feita em Power Query/Excel."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
